# natural-language-sql-converter-v2

./: .env  DEPENDENCIES.txt  README.md  SECURITY_REPORT.md  VS_CODE_SETUP.md  add_custom_schema.py  app.py  extract_schema.sql  models.py  pyproject.toml  replit.md  security_audit.py  sql_to_json_converter.py  template_generator.py  upload_essential.py
.cache/replit/: toolchain.json
.cache/replit/env/: latest  latest.json
services/: azure_openai_service.py  connection_api_service.py  query_feedback_service.py  schema_analyzer.py  schema_service.py  sql_validator.py  sqlserver_service.py  windows_auth_service.py
services/schemas/: README.md  ecommerce.json  financial.json  hr_system.json  inventory.json  template.json
static/css/: custom.css
static/js/: app.js
templates/: base.html  index.html
