[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-language-sql-converter"
version = "0.1.0"
description = "Flask web application that converts natural language to SQL queries using Azure OpenAI"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.34.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "sqlparse>=0.5.3",
    "werkzeug>=3.1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
